<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smartapps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_profile">Profile</string>
    <string name="service_name">Deezer</string>
    <string name="service_category">Música</string>
    <string name="service_moreinfo">Más info ></string>
    <string name="icon_status_notactive">Activar</string>
    <string name="services_select_message">Tienes 1 Servicio sin usar, activalo ahora!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Dialog Activate Service texts -->
    <string name="dialog_activate_text_header">Activar {Servicio}</string>
    <string name="dialog_activate_text_ok">Activate</string>
    <string name="dialog_activate_text_price">$15900</string>
    <string name="dialog_activate_text_cancel">Cancel</string>
    <string name="dialog_activate_text_instructions">{Servicio} wil be one of the Premium Services included in your plan, it has no additional cost. With {Servicio} you will be able to stream music concert and documentary videos.</string>

    <!-- Dialog Activate Result texts -->
    <string name="text_result_activate_header">Your Service {Service} has been activated</string>
    <string name="text_result_activate_subtitle">You can start using your service from {date}</string>
    <string name="text_result_activate_instructions_header">Instructions to use:</string>
    <string name="text_service_instruction">Haz click en el boton para crear tu cuenta</string>
    <string name="text_result_activate_create_account">Crea tu cuenta</string>





</resources>
