<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<!--
    For list items that contain secondary actions (in this case, 'delete'),
    it's important to use dividers to distinguish the primary touch target from
    the secondary action. This is done using android:showDividers and its
    related attributes.

    The android:dividerPadding attribute insets the divider line by the given
    amount on each side (in this case, top and bottom). Divider padding helps
    establish visual hierarchy when several dividers are used in a screen. In
    this case, the padding helps separate this vertical divider from horizontal
    list item separators in the main ListView, and establishes a stronger
    relationship between the delete action and the primary target to its left.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools=" http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:ignore="MissingPrefix"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:minHeight="?android:listPreferredItemHeightLarge"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="#FFFFFFFF"
    >

    <FrameLayout
        android:id="@+id/service_image"
        android:layout_width="@dimen/preferred_service_icon_width"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        >

        <ImageView
            android:id="@+id/iv_logoservice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:src="@drawable/logo_deezer"/>

        <ImageView
            android:id="@+id/iv_logoservice2"
            android:src="@drawable/rounded_square"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout android:id="@+id/primary_target"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="?android:listPreferredItemPaddingLeft"
        android:paddingRight="?android:listPreferredItemPaddingRight"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:background="?android:selectableItemBackground">

        <TextView style="@style/ServiceText"
            android:id="@android:id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_name" />

        <TextView style="@style/CategoryText"
            android:id="@android:id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_category" />

        <TextView style="@style/InfoText"
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_moreinfo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check_instructions"
                android:gravity="right"
                android:text="Click para activar"
                style="@style/CheckText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>


    <ImageButton android:id="@+id/service_action"
        style="?android:borderlessButtonStyle"
        android:layout_width="@dimen/standard_touch_target_size"
        android:layout_height="match_parent"
        android:src="@drawable/check_inactive"
        android:contentDescription="@string/icon_status_notactive"

        android:paddingTop="@dimen/listPreferredItemPaddingTop"
        android:paddingBottom="@dimen/listPreferredItemPaddingBottom"

    />

</LinearLayout>

</LinearLayout>